--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -21,3 +20,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#conf file
+Config.toml
+
+#.idea file
+.idea
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Build files
+**/build/*
