--- a/asyncapi/salesforce/Ballerina.toml
+++ b/asyncapi/salesforce/Ballerina.toml
@@ -2,19 +2,19 @@
 license = ["Apache-2.0"]
 keywords = ["Sales & CRM/Customer Relationship Management", "Cost/Freemium"]
 org = "ballerinax"
-name = "trigger.sfdc"
+name = "trigger.salesforce"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
-version = "0.1.0"
-icon="icon.png"
-distribution = "slbeta5"
+version = "0.2.0"
+icon="docs/icon.png"
+distribution = "slbeta6"
 authors = ["Ballerina"]
 
 [build-options]
 observabilityIncluded = true
 
 [[platform.java11.dependency]]
-path = "../../native/sfdc/build/libs/sfdc-0.1.0-all.jar"
+path = "../../native/sfdc/build/libs/sfdc-0.2.0-all.jar"
 groupId = "io.ballerina.sfdc"
 artifactId = "sfdc"
 module = "sfdc" 
-version = "0.1.0"
+version = "0.2.0"
