--- a/asyncapi/asb/Ballerina.toml
+++ b/asyncapi/asb/Ballerina.toml
@@ -5,7 +5,7 @@ version = "0.3.0"
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords = ["IT Operations/Message Brokers", "Cost/Paid", "Vendor/Microsoft"]
-icon = "icon.png"
+icon = "docs/icon.png"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 distribution = "slbeta6"
 
