--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,14 @@
 org.gradle.caching=true
+group=org.ballerinalang
+version=0.6.0-alpha9-SNAPSHOT
+puppycrawlCheckstyleVersion=8.18
+testngVersion=6.14.3
 slf4jVersion=1.7.30
+githubSpotbugsVersion=4.0.5
+githubJohnrengelmanShadowVersion=5.2.0
+underCouchDownloadVersion=4.0.4
+researchgateReleaseVersion=2.8.0
+checkstyleToolVersion=7.8.2
 ballerinaLangVersion=2.0.0-beta.6
 
 // SFDC trigger
