Updare release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: Release
 
-on:
-  release:
-    types:
-      - published
+on: [push]
 
 jobs:
   container:
@@ -22,4 +19,4 @@ jobs:
           packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
-           ./gradlew build -Prelease=true
+          ./gradlew build -Prelease=true
