--- a/asyncapi/google.drive/Ballerina.toml
+++ b/asyncapi/google.drive/Ballerina.toml
@@ -6,7 +6,7 @@ name = "trigger.google.drive"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.5.3"
 distribution = "slbeta6"
-# icon = "docs/icon.png"
+icon = "docs/icon.png"
 authors = ["Ballerina"]
 
 [build-options]
