--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
 name: CI
 
-on: [push, pull_request]
-      
+on:
+  pull_request_target:
+    types: [assigned, opened, synchronize, reopened]
+
 jobs:
   container:
     runs-on: ubuntu-latest
@@ -15,7 +17,7 @@ jobs:
           BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
           JAVA_OPTS: -DBALLERINA_DEV_COMPILE_BALLERINA_ORG=true
           GRADLE_USER_HOME: ~/.gradle
-          packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
-          packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }} 
+          packageUser: ${{ github.actor }}
+          packagePAT: ${{ secrets.GIT_PAT }}
         run: |
           ./gradlew build -Prelease=false
