--- a/asyncapi/slack/Ballerina.toml
+++ b/asyncapi/slack/Ballerina.toml
@@ -5,8 +5,8 @@ org = "ballerinax"
 name = "trigger.slack"
 icon = "icon.png"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
-version = "0.6.4"
-distribution = "slbeta6"
+version = "0.6.5"
+distribution = "2201.0.1"
 icon = "docs/icon.png"
 authors = ["Ballerina"]
 
