--- a/asyncapi/google.drive/Ballerina.toml
+++ b/asyncapi/google.drive/Ballerina.toml
@@ -4,8 +4,8 @@ keywords = ["Communication/Team Chat", "Cost/Freemium", "Trigger"]
 org = "ballerinax"
 name = "trigger.google.drive"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
-version = "0.6.0"
-distribution = "slbeta6"
+version = "0.6.2"
+distribution = "2201.0.1"
 icon = "docs/icon.png"
 authors = ["Ballerina"]
 
