--- a/asyncapi/google.sheets/Dependencies.toml
+++ b/asyncapi/google.sheets/Dependencies.toml
@@ -9,7 +9,7 @@ dependencies-toml-version = "2"
 [[package]]
 org = "ballerina"
 name = "auth"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -22,7 +22,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "cache"
-version = "3.1.0"
+version = "3.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "task"},
@@ -31,8 +31,16 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "cloud"
+version = "2.1.1"
+modules = [
+	{org = "ballerina", packageName = "cloud", moduleName = "cloud"}
+]
+
+[[package]]
+org = "ballerina"
 name = "crypto"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
@@ -41,7 +49,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "file"
-version = "1.1.0"
+version = "1.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "log"},
@@ -53,7 +61,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "http"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
@@ -83,7 +91,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "io"
-version = "1.1.0"
+version = "1.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
@@ -97,7 +105,7 @@ version = "0.0.0"
 [[package]]
 org = "ballerina"
 name = "jwt"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -175,7 +183,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "log"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -189,7 +197,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "mime"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -199,7 +207,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "oauth2"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -211,7 +219,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "observe"
-version = "1.0.0"
+version = "1.0.2"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -219,7 +227,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "os"
-version = "1.1.0"
+version = "1.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -227,7 +235,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "regex"
-version = "1.1.0"
+version = "1.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -235,7 +243,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "task"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
@@ -244,7 +252,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "time"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -252,7 +260,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "url"
-version = "2.1.0"
+version = "2.2.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -284,8 +292,9 @@ modules = [
 [[package]]
 org = "ballerinax"
 name = "trigger.google.sheets"
-version = "0.5.3"
+version = "0.6.1"
 dependencies = [
+	{org = "ballerina", name = "cloud"},
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "log"},
 	{org = "ballerinai", name = "observe"},
