--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ githubJohnrengelmanShadowVersion=5.2.0
 underCouchDownloadVersion=4.0.4
 researchgateReleaseVersion=2.8.0
 checkstyleToolVersion=7.8.2
-ballerinaLangVersion=2.0.0-beta.6
+ballerinaLangVersion=2201.0.0
 
 // SFDC trigger
 sfdc_trigger_group=io.ballerina.sfdc
@@ -17,5 +17,5 @@ sfdc_trigger_version=0.3.0
 
 // Azure service bus trigger
 asb_trigger_group=io.ballerinax.asb
-asb_trigger_version=0.3.1
+asb_trigger_version=0.3.3
 asb_sdk_version=3.5.1
