--- a/asyncapi/salesforce/Ballerina.toml
+++ b/asyncapi/salesforce/Ballerina.toml
@@ -4,17 +4,17 @@ keywords = ["Sales & CRM/Customer Relationship Management", "Cost/Freemium"]
 org = "ballerinax"
 name = "trigger.salesforce"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
-version = "0.3.1"
+version = "0.3.2"
 icon="docs/icon.png"
-distribution = "slbeta6"
+distribution = "2201.0.0"
 authors = ["Ballerina"]
 
 [build-options]
 observabilityIncluded = true
 
 [[platform.java11.dependency]]
-path = "../../native/sfdc/build/libs/sfdc-0.3.0-all.jar"
+path = "../../native/sfdc/build/libs/sfdc-0.3.2-all.jar"
 groupId = "io.ballerina.sfdc"
 artifactId = "sfdc"
 module = "sfdc" 
-version = "0.3.0"
+version = "0.3.2"
