--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,11 @@ githubJohnrengelmanShadowVersion=5.2.0
 underCouchDownloadVersion=4.0.4
 researchgateReleaseVersion=2.8.0
 checkstyleToolVersion=7.8.2
-ballerinaLangVersion=2.0.0-beta.6
+ballerinaLangVersion=2201.0.0
 
 // SFDC trigger
 sfdc_trigger_group=io.ballerina.sfdc
-sfdc_trigger_version=0.3.0
+sfdc_trigger_version=0.3.2
 
 // Azure service bus trigger
 asb_trigger_group=io.ballerinax.asb
