--- a/asyncapi/twilio/Ballerina.toml
+++ b/asyncapi/twilio/Ballerina.toml
@@ -5,6 +5,7 @@ org = "ballerinax"
 name = "trigger.twilio"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.6.5"
+icon = "docs/icon.png"
 distribution = "2201.0.1"
 authors = ["Ballerina"]
 
