--- a/.github/workflows/dev_stage_release.yml
+++ b/.github/workflows/dev_stage_release.yml
@@ -14,6 +14,9 @@ on:
         description: Ballerina Image Version
         required: true
         default: 2201.0.1
+      specific_trigger:
+        description: Specific Trigger to Release
+        required: false
 
 jobs:
   release:
@@ -35,8 +38,9 @@ jobs:
           JAVA_OPTS: -DBALLERINA_DEV_COMPILE_BALLERINA_ORG=true
           packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
+          specificTrigger: ${{ github.event.inputs.specific_trigger }}
         run: |
-          ./gradlew build -Prelease=true -Premote=true
+          ./gradlew build -Prelease=false -Premote=true -Ptrigger=${{ github.event.inputs.specific_trigger }}
 
       - name: Push to Dev
         if: github.event.inputs.bal_central_environment == 'DEV'
@@ -46,4 +50,4 @@ jobs:
           packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
-          ./gradlew build -Prelease=true
+          ./gradlew build -Prelease=false -Ptrigger=${{ github.event.inputs.specific_trigger }}
