Migrate triggers to 2201.2.1

--- a/.github/workflows/dev_stage_release.yml
+++ b/.github/workflows/dev_stage_release.yml
@@ -17,6 +17,13 @@ on:
       specific_trigger:
         description: Specific Trigger to Release
         required: false
+      release_build:
+        description: Do a Release
+        type: choice
+        options:
+          - true
+          - false
+        required: true
 
 jobs:
   release:
@@ -40,7 +47,7 @@ jobs:
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
           specificTrigger: ${{ github.event.inputs.specific_trigger }}
         run: |
-          ./gradlew build -Prelease=false -Premote=true -Ptrigger=${{ github.event.inputs.specific_trigger }}
+          ./gradlew build -Prelease=${{ github.event.inputs.release_build }} -Premote=true -Ptrigger=${{ github.event.inputs.specific_trigger }}
 
       - name: Push to Dev
         if: github.event.inputs.bal_central_environment == 'DEV'
@@ -50,4 +57,4 @@ jobs:
           packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
-          ./gradlew build -Prelease=false -Ptrigger=${{ github.event.inputs.specific_trigger }}
+          ./gradlew build -Prelease=${{ github.event.inputs.release_build }} -Ptrigger=${{ github.event.inputs.specific_trigger }}
