Adding Notification event asyncapi definition

--- a/asyncapi/asgardeo/asyncapi.yml
+++ b/asyncapi/asgardeo/asyncapi.yml
@@ -55,6 +55,14 @@ channels:
             payload:
               $ref: '#/components/schemas/LoginSuccessEvent'
             title: User login succesfull.
+  Notifications:
+    subscribe:
+      message:
+        oneOf:
+          - x-ballerina-event-type: urn:ietf:params:notifications:notificationEvent
+            payload:
+              $ref: '#/components/schemas/NotificationEvent'
+            title: Notification event.
 components:
   schemas:
     GenericUserData:
@@ -231,3 +239,30 @@ components:
         userName:
           type: string
           example: john@mailinator.com
+    NotificationEvent:
+      type: object
+      properties:
+        securityData:
+          $ref: '#/components/schemas/GenericSecurityData'
+        eventData:
+          $ref: '#/components/schemas/NotificationEventData'    
+    NotificationEventData:
+      type: object
+      properties:
+        organizationId:
+          type: string
+          example: '1234'
+        organizationName:
+          type: string
+          example: myorg
+        notificationType:
+          type: string
+          example: SMS OTP
+        eventPayload:
+          type: object
+          additionalProperties:
+            type: string
+          example:
+            sendTo: '12345678'
+            messageBody: >-
+              Your one-time password for the sms_otp_singlepage_App is 341304. This expires in 5 minutes.
