Update listener to the SDK 7.13.1

--- a/native/asb/build.gradle
+++ b/native/asb/build.gradle
@@ -25,10 +25,11 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.microsoft.azure', name: 'azure-servicebus', version: project.asb_sdk_version
-    dist group: 'com.microsoft.azure', name: 'azure-servicebus', version: project.asb_sdk_version
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: project.slf4jVersion
+    implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: project.asb_sdk_version
+    dist group: 'com.azure', name: 'azure-messaging-servicebus', version: project.asb_sdk_version
     compile group: 'org.ballerinalang', name: 'ballerina-lang', version: project.ballerinaLangVersion
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    dist group: 'log4j', name: 'log4j', version: '1.2.17'
     compile(group: 'org.ballerinalang', name: 'ballerina-runtime', version: project.ballerinaLangVersion) {
         transitive = false
     }
