--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,14 @@ group=org.ballerinalang
 version=0.6.0-alpha9-SNAPSHOT
 puppycrawlCheckstyleVersion=8.18
 testngVersion=6.14.3
-slf4jVersion=1.7.30
+slf4jVersion=2.0.6
+log4jVersion=1.2.17
 githubSpotbugsVersion=4.0.5
 githubJohnrengelmanShadowVersion=5.2.0
 underCouchDownloadVersion=4.0.4
 researchgateReleaseVersion=2.8.0
 checkstyleToolVersion=7.8.2
-ballerinaLangVersion=2201.0.0
+ballerinaLangVersion=2201.3.2
 
 // SFDC trigger
 sfdc_trigger_group=io.ballerina.sfdc
@@ -17,5 +18,5 @@ sfdc_trigger_version=0.3.2
 
 // Azure service bus trigger
 asb_trigger_group=io.ballerinax.asb
-asb_trigger_version=0.3.3
-asb_sdk_version=3.5.1
+asb_trigger_version=1.0.0
+asb_sdk_version=7.13.1
